# fintech/src/main/java/ru/kslacker/fintech/dto/WeatherDto.java
@@ -6,6 +6,6 @@ import java.time.LocalDateTime;
 import java.util.UUID;
 
 @Builder
-public record WeatherDto(UUID cityId, String cityName, double temperatureValue, LocalDateTime dateTime) {
+public record WeatherDto(UUID cityId, String cityName, WeatherTypeInfoDto type, double temperatureValue, LocalDateTime dateTime) {
 
 }
