# fintech/src/main/java/ru/kslacker/fintech/dto/WeatherTypeInfoDto.java
@@ -1,0 +1,6 @@
+package ru.kslacker.fintech.dto;
+
+import ru.kslacker.fintech.dataaccess.enums.WeatherType;
+
+public record WeatherTypeInfoDto(WeatherType type, String iconUrl) {
+}
